Fixing mistakes in generated shops. Removing images for now. Will add them all back in a future commit.

--- a/src/shops/BeasLusciousSweets.json
+++ b/src/shops/BeasLusciousSweets.json
@@ -1,6 +1,6 @@
 {
 	"name": "Bea's Luscious Sweets",
-	"image": "/shops/Bea'sLusciousSweets.png",
+	"image": "/shops/BeasLusciousSweets.png",
 	"description": "PLACEHOLDER",
 	"attitude": "Neutral",
 	"discount": 0,
