--- a/src/shops/BeasLusciousSweets.json
+++ b/src/shops/BeasLusciousSweets.json
@@ -1,10 +1,10 @@
 {
 	"name": "Bea's Luscious Sweets",
 	"image": "/shops/BeasLusciousSweets.png",
-	"description": "PLACEHOLDER",
+	"description": "Bea’s Luscious Sweets, a charming wood building, is a confectionery shop known for its array of sweets. The owner, <u>Beatrice “Bea” Honeywell</u>, is a heavyset older woman with a passion for her craft, often engaging in conversations with customers and offering small sample treats to children. The apprentice, <u>Thomas “Tom” Fairchild</u>, a long-time customer in his late teens, is learning how to make his favorite treats, often attempting to express his quirky humor in whimsical candy creations.",
 	"attitude": "Neutral",
 	"discount": 0,
-	"tags": [],
+	"tags": ["Sweeetsmith", "Candymaker", "Apothecary", "Sugarplum Seller"],
 	"items": [
 		{
 			"name": "Almond Biscuits (per dozen)",
@@ -125,8 +125,8 @@
 		}
 	],
 	"quest": {
-		"name": "PLACEHOLDER",
-		"description": "PLACEHOLDER",
+		"name": "The Sweet Thief’s Mischief",
+		"description": "\tWhile in Bea’s shop, one of the team’s adventurers is bumped into by an urchin on the way to the counter to get a free treat from Bea. When they go to pay for his purchase, they find their coin purse missing and runs out the door to try to find that urchin. Being unsuccessful, they return to the shop to find out who that urchin was and where she lives. Bea tells them she can’t keep track of them all, and so many children live on the street. They can’t tell if Bea is telling the truth or is just sympathetic.\n\tAs they go to leave, Bea calls them back and offers them their treats – on the house. A bit later, they realize that a magical ring (or other really valuable item) was also stolen. Since that is truly valuable, they insist that the group help retrieve it, no matter what it takes.",
 		"reward": "PLACEHOLDER",
 		"completed": false
 	},
