--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.9.0",
     "csv-parser": "^3.0.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
